# Volume-Renderer-with-OpenGL

./: .gitignore  CMakeLists.txt  README.md  todolist.txt
data/raw/: tooth_103x94x161_uint8.raw
include/: CalPoint.h  camera.h  dataloader.h  defines.h  functionloader.h  mesh.h  shader.h  utils.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
report/: report.tex
shader/: FShader.fs  VShader.vs  alpha_blending.frag  fragmentShader.fs  fragmentShader.glsl  shaderDebug.fs  shaderDebug.vs  vertexShader.glsl  vertexShader.vs
src/: CalPoint.cpp  camera.cpp  dataloader.cpp  fragmentShader.glsl  functionloader.cpp  geometryShader.glsl  gsnormal.glsl  main.cpp  mesh.cpp  shader.cpp  utils.cpp  vertexShader.glsl  vsnormal.glsl
